Fixed layout issues with the user dashboard home page

--- a/src/partials/Dashboard/UserDashboardHome/styles.css
+++ b/src/partials/Dashboard/UserDashboardHome/styles.css
@@ -1,4 +1,6 @@
 .user-dashboard-home {
+    height: 100vh;
+    overflow: auto;
     padding: 5rem;
     padding-top: 3rem;
 }
